--- a/profil.html
+++ b/profil.html
@@ -14,10 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.5/dist/sweetalert2.min.css"
-    />
+    <link rel="stylesheet" href="Sweet Alert 2/sweetalert2.min.css" />
   </head>
   <body>
     <div class="nav">
@@ -229,8 +226,7 @@
         </div>
       </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.5/dist/sweetalert2.all.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="Sweet Alert 2/sweetalert2.all.min.js"></script>
     <script src="js/alert.js"></script>
   </body>
 </html>
